--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
       <h1>Pokedex JS</h1>
+      <ul class = "pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
 </html>
