edited syntax errors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Pokedex JS</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" type="text/css">
   </head>
   <body>
       <h1>Pokedex JS</h1>
