added modal / ui functions

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link href="style.css" type="text/css">
   </head>
   <body>
-      <h1>Pokedex JS</h1>
-      <ul class = "pokemon-list"></ul>
+    <button id='show-modal'>Show model</button>
+    <button id='show-dialog'>Show dialog</button>
+    <div id='modal-container'></div>
+    <h1>Modal title</h1>
+    <p>Modal text</p>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
